k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-app
  namespace: production
  labels:
    app: demo-devops
    run: demo-devops-app
spec:
  selector:
    matchLabels:
      app: demo-devops
      run: demo-devops-app
  template:
    metadata:
      labels:
        app: demo-devops
        run: demo-devops-app
    spec:
      containers:
      - name: demo-devops-app
        image: us-central1-docker.pkg.dev/devsu-devops-390022/devsu/demo-devops:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/api/users/"
            port: 8000
            scheme: HTTP
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
