k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    run: demo-devops-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
