k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: demo-devops
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: demo-devops.devsu.arielglz.com 
    http:
      paths:
      - pathType: Prefix
        path: "/api/users/"
        backend:
          service:
            name: demo-svc
            port: 
              number: 80
